// Copyright (c) 2021 WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
//
// WSO2 Inc. licenses this file to you under the Apache License,
// Version 2.0 (the "License"); you may not use this file except
// in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Negotiator {
    rpc handshake (HandshakeRequest)
    returns (HandshakeResponse);

    rpc publishMetrics (MetricsPublishRequest)
    returns (google.protobuf.Empty);

    rpc publishTraces (TracesPublishRequest)
    returns (google.protobuf.Empty);
}

message HandshakeResponse {
    string id = 1;
    repeated string protocols = 2;
}

message MetricsPublishRequest {
    string id = 1;  // ID received in the handshake
    repeated Metric metrics = 2;
}

message Metric {
    int64 timestamp = 1;
    string name = 2;
    double value = 3;
    map<string, string> tags = 4;
}

message TracesPublishRequest {
    string id = 1;  // ID received in the handshake
    repeated TraceSpan spans = 2;
}

message TraceSpan {
    string traceId = 1;
    string spanId = 2;
    string parentSpanId = 3;
    string serviceName = 4;
    string operationName = 5;
    int64 timestamp = 6;
    int64 duration = 7;
    map<string, string> tags = 8;
}
message HandshakeRequest {
    string jsonStr = 1;
    string programHash = 2;
    string userId = 3;
    string instanceId = 4;
    string applicationId = 5;
}
