// Copyright (c) 2021 WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
//
// WSO2 Inc. licenses this file to you under the Apache License,
// Version 2.0 (the "License"); you may not use this file except
// in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

service SeparateModuleService {
	rpc unary (SMReq) returns (SMRes);
	rpc serverStreaming (SMReq) returns (stream SMRes);
	rpc clientStreaming (stream SMReq) returns (SMRes);
	rpc bidirectional1 (stream SMReq) returns (stream SMRes);
	rpc bidirectional2 (stream SMReq) returns (stream SMRes);
}

message SMReq {
	string name = 1;
	int32 id = 2;
}

message SMRes {
	string name = 1;
	int32 id = 2;
}