/*
 *  Copyright (c) 2022, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 *  WSO2 Inc. licenses this file to you under the Apache License,
 *  Version 2.0 (the "License"); you may not use this file except
 *  in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing,
 *  software distributed under the License is distributed on an
 *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 *  KIND, either express or implied.  See the License for the
 *  specific language governing permissions and limitations
 *  under the License.
 */

syntax = "proto3";

package packaging;

import "ballerina/protobuf/descriptor.proto";

option (ballerina.protobuf.ballerina_module) = "tool_test_packaging_4.message";

message ReqMessage {
  int32 req = 1;
  string value = 2;
  SimpleEnum enu = 3;
}

message ResMessage {
  int32 req = 1;
  string value = 2;
  SimpleEnum enu = 3;
}

service helloBallerina {
  rpc hi(ReqMessage) returns (ResMessage);
  rpc hey(ReqMessage) returns (stream ResMessage);
  rpc hello(stream ReqMessage) returns (ResMessage);
  rpc bye(stream ReqMessage) returns (stream ResMessage);
}

enum SimpleEnum {
  x = 0;
  y = 1;
  z = 2;
}
